--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^6.6.4",
     "axios": "^1.7.7",
     "detect-port-alt": "^1.1.6",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -40,7 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "@aws-amplify/backend": "^1.3.2",
     "@aws-amplify/backend-cli": "^1.2.9",
