--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.7.7",
     "detect-port-alt": "^1.1.6",
     "papaparse": "^5.4.1",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
